--- a/index.html
+++ b/index.html
@@ -172,7 +172,7 @@
                 </div>
                 <div class="projects-grid">
                     <div class="project-card web">
-                        <img src="assets/images/GTH.jpg" alt="Game Trade Hub Thumbnail">
+                        <img src="assets/images/gth.jpg" alt="Game Trade Hub Thumbnail">
                         <div class="card-content">
                             <h3>Game Trade Hub</h3>
                             <p class="description">Gaming marketplace concept for Pakistani gamers. Built using HTML, CSS, JavaScript.</p>
@@ -185,7 +185,7 @@
                     </div>
 
                     <div class="project-card academic">
-                        <img src="assets/images/Sudoko.jpg" alt="Sudoku Game Thumbnail">
+                        <img src="assets/images/sudoko.jpg" alt="Sudoku Game Thumbnail">
                         <div class="card-content">
                             <h3>Sudoku Game</h3>
                             <p class="description">Puzzle logic game to improve interactive programming skills.</p>
@@ -198,7 +198,7 @@
                     </div>
 
                     <div class="project-card academic">
-                        <img src="assets/images/TTT.jpg" alt="Tic Tac Toe Game Thumbnail">
+                        <img src="assets/images/ttt.jpg" alt="Tic Tac Toe Game Thumbnail">
                         <div class="card-content">
                             <h3>Tic Tac Toe Game</h3>
                             <p class="description">Classic multiplayer UI and logic practice game.</p>
@@ -211,7 +211,7 @@
                     </div>
 
                     <div class="project-card academic">
-                        <img src="assets/images/BBM.jpg" alt="Bank Management Thumbnail">
+                        <img src="assets/images/bbm.jpg" alt="Bank Management Thumbnail">
                         <div class="card-content">
                             <h3>Basic Bank Management System</h3>
                             <p class="description">Console-based OOP practice project.</p>
@@ -374,3 +374,4 @@
 </body>
 
 </html>
+
