--- a/index.html
+++ b/index.html
@@ -42,7 +42,8 @@
                     Full Stack Developer crafting intelligent web solutions and advancing AI-driven automation.
                 </p>
                 <div class="hero-buttons">
-                    <a href="assets/resume/Resume.pdf" download class="btn primary-btn">
+                    <a href="assets/resume
+/Resume.pdf" download class="btn primary-btn">
                         <i class="fas fa-download"></i> Download Resume
                     </a>
                     <a href="#contact" class="btn secondary-btn">
@@ -374,5 +375,6 @@
 </body>
 
 </html>
+
 
 
