--- a/index.html
+++ b/index.html
@@ -308,30 +308,26 @@
                 <div class="contact-grid">
                     <div class="contact-form-container">
                         <form id="contact-form" action="https://formsubmit.co/noumansyed069@gmail.com" method="POST">
-                        <input type="hidden" name="_subject" value="New Portfolio Contact from Syed Nouman Haider">
-                        <input type="hidden" name="_captcha" value="false">
-                        <input type="hidden" name="_next" value="https://noumansyed70.github.io/" />
-
-                        <div class="form-group">
-                        <label for="name">Your Name:</label>
-                        <input type="text" id="name" name="name" required>
-                        <span class="error-message" id="name-error"></span>
-                        </div>
-
-                        <div class="form-group">
-                        <label for="email">Your Email:</label>
-                        <input type="email" id="email" name="email" required>
-                        <span class="error-message" id="email-error"></span>
-                        </div>
-
-    <div class="form-group">
-        <label for="message">Your Message:</label>
-        <textarea id="message" name="message" rows="5" required></textarea>
-        <span class="error-message" id="message-error"></span>
-    </div>
-
-    <button type="submit" class="btn primary-btn submit-btn">Send Message</button>
-</form>
+                            <input type="hidden" name="_subject" value="New Portfolio Contact from Syed Nouman Haider">
+                            <input type="hidden" name="_captcha" value="false">
+                            <input type="hidden" name="_next" value="https://noumansyed70.github.io/my-portfolio/" />
+                            <div class="form-group">
+                                <label for="name">Your Name:</label>
+                                <input type="text" id="name" name="name" required>
+                                <span class="error-message" id="name-error"></span>
+                            </div>
+                            <div class="form-group">
+                                <label for="email">Your Email:</label>
+                                <input type="email" id="email" name="email" required>
+                                <span class="error-message" id="email-error"></span>
+                            </div>
+                            <div class="form-group">
+                                <label for="message">Your Message:</label>
+                                <textarea id="message" name="message" rows="5" required></textarea>
+                                <span class="error-message" id="message-error"></span>
+                            </div>
+                            <button type="submit" class="btn primary-btn submit-btn">Send Message</button>
+                        </form>
 
                     </div>
                     <div class="contact-details-container">
@@ -380,6 +376,7 @@
 </body>
 
 </html>
+
 
 
 
